# octal8

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  octal8.py  requirements.txt  setup.cfg  tox.ini
.github/workflows/: tests.yaml
tests/: octal8_test.py
