[metadata]
name = octal8
version = 1.2.1
description = Convert base-10 ints to base-8.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/samueljsb/octal8
author = Samuel Searles-Bryant
author_email = sam@samueljsb.co.uk
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
py_modules = octal8
install_requires =
    tokenize-rt
python_requires = >=3.7

[options.entry_points]
console_scripts =
    octal8 = octal8:main

[bdist_wheel]
universal = True

[isort]
profile = black
force_single_line = true
known_first_party = octal8

[flake8]
exclude = venv
max-line-length = 88

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
pretty = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[mypy-tests.*]
disallow_untyped_defs = false
